[project]
name = "see-also"
version = "0.1.0"
description = ""
authors = [
    {name = "Donal Phipps",email = "donal.phipps@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=1.90.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
